stable build and dependencies

--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,8 @@
   "description": "Twitter interface to token contracts running on smartweave",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node ./bot.ts"
   },
   "author": "Sam Rahimi",
   "license": "ISC",
