--- a/src/package.json
+++ b/src/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@types/node": "^13.13.4",
-    "arweave": "github:ArweaveTeam/arweave-js#fastwrite-signature",
+    "arql-ops": "^1.0.0",
+    "arweave": "^1.7.1",
     "async-retry": "^1.3.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
