--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,7 @@
     "node-twitter-api": "^1.8.0",
     "pg": "^8.0.3",
     "ts-node": "^8.10.2",
+    "twit": "^2.2.11",
     "twitter": "^1.7.1"
   }
 }
